--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Navbar - Bajaj</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="bg-gray-50">
     <!-- Header -->
@@ -14,7 +14,7 @@
       <div class="bg-transparent px-6 py-2">
         <div class="flex justify-between items-center max-w-7xl mx-auto">
           <div class="flex items-center space-x-2">
-            <span class="text-white font-semibold">G</span>
+            <img src="assets/golchha-logo.png" alt="golcha_logo" />
             <span class="text-sm text-white/80"
               >GOLCHHA GROUP WITH LEGACY OF 100 YEAR</span
             >
@@ -149,14 +149,8 @@
           </div>
 
           <!-- Center Logo -->
-          <div class="flex items-center space-x-4">
-            <div class="bg-blue-600 text-white px-4 py-2 font-bold text-xl">
-              BAJAJ
-            </div>
-            <div class="text-blue-600 text-sm font-semibold">
-              LOVED IN 70+ COUNTRIES
-            </div>
-          </div>
+
+          <img class="h-[72px]" src="assets/logo.png" alt="logo" />
 
           <!-- Right Navigation Items -->
           <div class="flex items-center space-x-8">
