added experience section with carousel

--- a/index.html
+++ b/index.html
@@ -407,6 +407,34 @@
     </div>
   </section>
 
+  <!-- Experience section -->
+  <section class="py-16 px-4 sm:px-6 lg:px-8 bg-white">
+    <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-gray-800">THE BAJAJ EXPERIENCES</h2>
+
+    <div class="relative max-w-6xl mx-auto flex items-center justify-center">
+
+      <button id="leftArrow" class="nav-arrow absolute left-0 z-20 focus:outline-none -ml-6 sm:-ml-10 lg:-ml-12">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-600" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+        </svg>
+      </button>
+
+      <div class="experience-carousel-wrapper max-w-4xl mx-auto">
+        <div id="experienceCarouselContainer" class="experience-carousel-container">
+        </div>
+      </div>
+
+      <button id="rightArrow" class="nav-arrow absolute right-0 z-20 focus:outline-none -mr-6 sm:-mr-10 lg:-mr-12">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-600" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+        </svg>
+      </button>
+
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-gray-50 min-h-screen flex flex-col">
     <!-- Email Signup Section -->
@@ -530,6 +558,7 @@
   </script>
   <script type="module" src="js/bike-init.js"></script>
   <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/expereience-carousel.js"></script>  
 </body>
 
 </html>
