--- a/index.html
+++ b/index.html
@@ -10,32 +10,52 @@
 </head>
 
 <body class="bg-gray-50">
-  <!-- Header -->
+   <!-- Header -->
   <header class="header-overlay fixed top-0 left-0 right-0 z-50">
     <!-- Top Bar -->
-    <div class="bg-transparent py-2" style="padding-left: 150px; padding-right: 150px;">
-      <div class="flex justify-between items-center">
-        <div class="flex items-center space-x-2">
-          <img src="assets/golcha-logo.png" alt="golcha_logo" class="h-8 w-auto" />
-          <span class="text-sm font-bold text-[#FAFAFA]">GOLCHHA GROUP WITH LEGACY OF 100 YEAR</span>
+    <div class="bg-transparent py-2 top-bar">
+      <div class="top-bar-content">
+        <div class="top-bar-left">
+          <img src="assets/golcha-logo.png" alt="golcha_logo" class="top-bar-logo" />
+          <span class="top-bar-text">GOLCHHA GROUP WITH LEGACY OF 100 YEAR</span>
         </div>
-        <div class="flex items-center space-x-2">
-          <svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <div class="top-bar-right">
+          <svg class="top-bar-icon" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M6.89761 15.1618C8.28247 16.3099 10.0607 17 12.0001 17C16.4184 17 20.0001 13.4183 20.0001 9C20.0001 8.43095 19.9407 7.87578 19.8278 7.34036M6.89761 15.1618C5.12756 13.6944 4.00014 11.4789 4.00014 9C4.00014 4.58172 7.58186 1 12.0001 1C15.8494 1 19.0637 3.71853 19.8278 7.34036M6.89761 15.1618C8.85314 14.7147 11.1796 13.7828 13.526 12.4281C16.2564 10.8517 18.4773 9.01248 19.8278 7.34036M6.89761 15.1618C4.46844 15.7171 2.61159 15.5243 1.99965 14.4644C1.36934 13.3726 2.19631 11.5969 3.99999 9.70898M19.8278 7.34036C21.0796 5.79041 21.5836 4.38405 21.0522 3.46374C20.5134 2.53051 19.0095 2.26939 16.9997 2.59929"
               stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
-
-          <span class="text-sm font-bold text-[#FAFAFA]">International website</span>
-
+          <span class="top-bar-text">International website</span>
         </div>
       </div>
     </div>
 
     <!-- Main Navigation -->
-    <div class="bg-transparent py-2 font-roboto" style="padding-left: 150px; padding-right: 150px;">
+    <div class="bg-transparent py-2 font-roboto lg:px-[150px] px-4">
       <nav class="floating-navbar bg-white my-4 px-6">
-        <div class="flex justify-evenly items-center py-4 text-base">
+        <!-- Mobile Navigation -->
+        <div class="lg:hidden flex items-center justify-between py-4">
+          <!-- Mobile Menu Button -->
+          <button class="flex items-center justify-center w-8 h-8" id="mobile-menu-btn">
+            <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+          </button>
+
+          <!-- Mobile Logo -->
+          <img class="h-12" src="assets/logo.png" alt="logo" />
+
+          <!-- Mobile BIKES Button -->
+          <button class="text-sm font-medium text-gray-700 flex items-center space-x-1" id="mobile-bikes-btn">
+            <span>BIKES</span>
+            <svg class="w-4 h-4 transition-transform duration-200" id="mobile-bikes-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+            </svg>
+          </button>
+        </div>
+
+        <!-- Desktop Navigation -->
+        <div class="hidden lg:flex justify-evenly items-center py-4 text-base">
           <!-- Left Navigation Items -->
           <div class="flex items-center space-x-8">
             <!-- Motorcycles Dropdown -->
@@ -173,6 +193,176 @@
           </div>
         </div>
       </nav>
+
+      <!-- Mobile Bikes Full-Screen Menu -->
+      <div id="mobile-bikes-dropdown" class="lg:hidden">
+        <!-- Header -->
+        <div class="flex items-center justify-between p-4 border-b border-gray-200">
+          <span class="text-lg font-semibold text-gray-900">MOTORCYCLES</span>
+          <button id="mobile-bikes-close" class="w-8 h-8 flex items-center justify-center">
+            <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+          </button>
+        </div>
+
+        <!-- Content -->
+        <div class="flex-1 overflow-y-auto">
+          <div id="mobile-bikes-main" class="p-4">
+            <div id="mobile-bikes-brands" class="space-y-1">
+              <!-- Brands will be populated by JavaScript -->
+            </div>
+          </div>
+
+          <!-- Brand Detail View -->
+          <div id="mobile-bikes-brand-detail" class="hidden">
+            <!-- Brand Detail Header -->
+            <div class="flex items-center p-4 border-b border-gray-200">
+              <button id="mobile-bikes-back-btn" class="w-8 h-8 flex items-center justify-center mr-3">
+                <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                </svg>
+              </button>
+              <span id="mobile-bikes-brand-title" class="text-lg font-semibold text-gray-900">BIKES/PULSAR</span>
+              <button id="mobile-bikes-detail-close" class="w-8 h-8 flex items-center justify-center ml-auto">
+                <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+              </button>
+            </div>
+
+            <!-- Category Tabs -->
+            <div class="border-b border-gray-200">
+              <div id="mobile-bikes-category-tabs" class="flex overflow-x-auto px-4 py-2">
+                <!-- Category tabs will be populated by JavaScript -->
+              </div>
+            </div>
+
+            <!-- Motorcycle List -->
+            <div id="mobile-bikes-motorcycle-list" class="p-4">
+              <!-- Motorcycles will be populated by JavaScript -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile Menu Overlay -->
+    <div id="mobile-menu-overlay" class="fixed inset-0 bg-white z-50 transform translate-x-full transition-transform duration-300 lg:hidden">
+      <!-- Mobile Menu Header -->
+      <div class="flex items-center justify-between p-4 border-b border-gray-200">
+        <span class="text-lg font-semibold text-gray-900">Menu</span>
+        <button id="mobile-menu-close" class="w-8 h-8 flex items-center justify-center">
+          <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile Menu Content -->
+      <div id="mobile-menu-content" class="flex-1 overflow-y-auto">
+        <!-- Main Menu Items -->
+        <div id="mobile-main-menu" class="p-4">
+          <div class="space-y-1">
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              HOME
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              SHOWROOMS
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              WORKSHOPS
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              EVENTS
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              BOOK TEST RIDE
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              ABOUT US
+            </a>
+            <a href="#" class="mobile-menu-item block px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors">
+              NEWS
+            </a>
+            <button class="mobile-menu-item w-full text-left px-4 py-3 text-lg font-medium text-gray-900 hover:bg-gray-50 rounded-lg transition-colors flex items-center justify-between" id="mobile-media-btn">
+              <span>MEDIA CENTER</span>
+              <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+
+
+
+        <!-- Media Center Submenu -->
+        <div id="mobile-media-menu" class="hidden">
+          <div class="p-4">
+            <div class="flex items-center mb-4">
+              <button id="mobile-media-back" class="w-8 h-8 flex items-center justify-center mr-3">
+                <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                </svg>
+              </button>
+              <h3 class="text-lg font-semibold text-gray-900">MEDIA CENTER</h3>
+            </div>
+            <div class="space-y-1">
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                ABOUT US
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                ANNOUNCEMENTS
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                EVENTS
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                BLOGS
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                DOWNLOAD CENTER
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                CONTACT US
+              </a>
+              <a href="#" class="mobile-menu-item block px-4 py-3 text-base text-gray-700 hover:bg-gray-50 rounded-lg transition-colors">
+                FAQS
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Brand Detail View -->
+        <div id="mobile-brand-detail" class="hidden">
+          <!-- Brand Detail Header -->
+          <div class="flex items-center p-4 border-b border-gray-200">
+            <button id="mobile-back-btn" class="w-8 h-8 flex items-center justify-center mr-3">
+              <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+              </svg>
+            </button>
+            <span id="mobile-brand-title" class="text-lg font-semibold text-gray-900">BIKES/PULSAR</span>
+            <button id="mobile-detail-close" class="w-8 h-8 flex items-center justify-center ml-auto">
+              <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+              </svg>
+            </button>
+          </div>
+
+          <!-- Category Tabs -->
+          <div class="border-b border-gray-200">
+            <div id="mobile-category-tabs" class="flex overflow-x-auto px-4 py-2">
+              <!-- Category tabs will be populated by JavaScript -->
+            </div>
+          </div>
+
+          <!-- Motorcycle List -->
+          <div id="mobile-motorcycle-list" class="p-4">
+            <!-- Motorcycles will be populated by JavaScript -->
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 
